src/lesson 12/bff/templates/deployment.yaml
kind: Deployment
apiVersion: apps/v1
metadata:
  name: identityserver
  labels:
    app: identityserver
spec:
  replicas: 1
  selector:
    matchLabels:
      app: identityserver
  template:
    metadata:
      labels:
        app: identityserver
    spec:
      containers:
        - name: identityserver
          image: 'ledzhy/identityserver:latest'
          ports:
            - containerPort: 5000    
            
---
kind: Deployment
apiVersion: apps/v1
metadata:
  name: bffserver
  labels:
    app: bffserver
spec:
  replicas: 1
  selector:
    matchLabels:
      app: bffserver
  template:
    metadata:
      labels:
        app: bffserver
    spec:
      containers:
        - name: bffserver
          image: 'ledzhy/bffserver:latest'
          ports:
            - containerPort: 5002

---
kind: Deployment
apiVersion: apps/v1
metadata:
  name: profileserver
  labels:
    app: profileserver
spec:
  replicas: 1
  selector:
    matchLabels:
      app: profileserver
  template:
    metadata:
      labels:
        app: profileserver
    spec:
      containers:
        - name: profileserver
          image: 'ledzhy/profileserver:latest'
          ports:
            - containerPort: 5004
