src/lesson 12/bff/templates/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: otus
  annotations:
    kubernetes.io/ingress.class: 'nginx'
spec:
  rules:
    - host: arch.homework    
      http:
        paths:
          - path: /api/user
            pathType: Prefix
            backend:
              service:
                name: identityserver
                port:
                  number: 5000
          - path: /api/login
            pathType: Prefix
            backend:
              service:
                name: identityserver
                port:
                  number: 5000
          - path: /api/profile
            pathType: Prefix
            backend:
              service:
                name: bffserver
                port:
                  number: 5002
